# advent-of-code-2021

AOC_Arduino/: AOC_Arduino.atsln
AOC_Arduino/AOC_Arduino/: AOC_Arduino.componentinfo.xml  AOC_Arduino.cproj
AOC_Arduino/AOC_Arduino/include/: application.h  day_01.h  day_01_data.h  shared.s
AOC_Arduino/AOC_Arduino/include/sysb/: events.h
AOC_Arduino/AOC_Arduino/src/: application.c  day_01.c  day_01_asm.s  main.c
Adv.NET/: Adv.NET.csproj  Adv.NET.sln  AssignmentHelper.cs  AsyncQueue.cs  IAssignment.cs  Parser.cs  Program.cs
Adv.NET/Assignments/: BaseAssignment.cs  Day03.cs  Day04.cs  Day05.cs  Day06.cs  Day07.cs  Day08.cs
Adv.NET/input/: day07.txt
Pico/: CMakeLists.txt  commands.h  day01.c  day01.h  day01_data.c  day01_imp.s  day02_data.c  day02_imp.s  day03_data.c  day03_imp.s  hello_world.c
Python/: day03.py
